--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
     <id>com.your.company.unique.plugin.id</id>
-    <name>dfplugin</name>
+    <name>dbplugin</name>
     <version>1.0</version>
     <vendor email="1163096519@qq.com" url="http://www.baidu.com">deepblue</vendor>
 
